# AutoAim-Evaluation-Framework

./: CMakeLists.txt  README.md  requirements.txt  run_pipeline.py  统计与可视化调整建议.md
apps/: auto_aim_offline.cpp
config/: offline_test.yaml
config/cases/: linear_target.yaml  spinning_target.yaml  static_target.yaml
data/cases/linear_target/: metadata.yaml  observations.jsonl
data/cases/linear_target/ground_truth/: armor_states.jsonl  ideal_observations.jsonl  target_states.jsonl
data/cases/spinning_target/: frames.jsonl  metadata.yaml  observations.jsonl
data/cases/spinning_target/ground_truth/: armor_states.jsonl  ideal_observations.jsonl  target_states.jsonl
data/cases/static_target/: frames.jsonl  metadata.yaml  observations.jsonl
data/cases/static_target/ground_truth/: armor_states.jsonl  ideal_observations.jsonl  target_states.jsonl
data/common/: armor_geometry.yaml  ballistic_parameters.yaml
docs/: data_interface.md
tests/: test_core.py
utils/: __init__.py  ballistics.py  evaluator.py  generator.py  hit_checker.py  io_utils.py  math_utils.py  mock_runner.py  report.py  timeline.py  validation.py
visual/: README.md  compare_runs.py  visualize_run.py
visual_analyse/: README.md  analyse_error_propagation.py  visualize_run.py
